# scratch

./: .editorconfig  .gitignore  .gitmodules  README.md
11ty-website/: .editorconfig  .prettierignore  eleventy.config.js  eslint.config.js  package.json  pnpm-lock.yaml
11ty-website/src/: index.md
abathur/: Podfile
abathur/abathur/: AbathurLogger.h  AbathurLogger.m  AppDelegate.h  AppDelegate.m  HTTPServer.h  HTTPServer.m  HTTPServerViewController.h  HTTPServerViewController.m  MainView.h  MainView.m  main.m
abathur/abathur.xcodeproj/: project.pbxproj
abathur/abathur.xcworkspace/: contents.xcworkspacedata
abathur/abathurTests/: Info.plist  abathurTests.m
ai-competition/: .gitignore  launch_server.py  play_one_game.cmd  play_one_game_live.cmd
ai-competition/engine/: README.md  VERSION  engine.py  playgame.py
ai-competition/scratch_bot/: ants.py  log.py  scratch.py
ai-competition/sdk/: README.md
anubarak/: CMakeLists.txt
anubarak/src/core/: anubarak.lua
anubarak/src/main/: ab_logger.cxx  ab_logger.h  ab_mod_logger.cxx  ab_mod_logger.h  ab_module.h  ab_types.h  anubarak.cxx  anubarak.h  main.cxx
ashen/: .gitignore  CMakeLists.txt  Makefile.in  configure  configure.ac
ashen/src/: CMakeLists.txt  Makefile.am  Makefile.in  ash_alloc.c  ash_alloc.h  ash_config.h.in  ash_file.c  ash_file.h  ash_general.h  ash_hash.c  ash_hash.h  ash_list.c  ash_list.h  ash_log.c  ash_log.h  ash_main.c  ash_palloc.c  ash_palloc.h  ash_string.c  ash_string.h
ashen/test/: CMakeLists.txt  test_alloc.cxx  test_hash.cxx  test_list.cxx  test_main.cxx  test_string.cxx
ashen1/: CMakeLists.txt
ashen1/src/: ash_cfg.c  ash_cfg.h  ash_errno.c  ash_file.c  ash_file.h  ash_file_win.c  ash_hash.c  ash_hash.h  ash_list.c  ash_list.h  ash_log.c  ash_log.h  ash_mm.c  ash_mm.h  ash_str.c  ash_str.h  ash_test_file.c  ash_test_str.c  ash_test_time.c  ash_tests.c  ash_tests.h  ash_tests_util.c  ash_tests_util.h  ash_time.h  ash_types.h  ash_vbuf.c  ash_vbuf.h  ash_vfmt.c  ash_vfmt.h  main.c
chen/: .editorconfig  CMakeLists.txt  README.md
chen/src/: chen_log.cxx  chen_log.hxx  chen_log_console.cxx  chen_log_console.hxx  chen_log_handler.hxx  chen_logger.cxx  chen_logger.hxx  chen_misc.cxx  chen_misc.hxx  chen_prog_options.cxx  chen_prog_options.hxx  chen_serv.cxx  chen_serv.hxx  chen_test.cxx  chen_test_log.cxx  chen_types.hxx  main.cxx
chen/test/: chen_test_log.cxx
chromie/app/: build.gradle  proguard-rules.pro
db/pgext/: .gitignore  README.md  pg_simple_ext.control
electron-tests/: .jshintrc  index.js  package.json
elisp-exec/: elisp-exec.cmd  elisp-exec.sh
gazlowe/: CMakeLists.txt  README.md
gazlowe/src/: g_leetcode.cxx  g_leetcode_add_digits.cxx  g_leetcode_contains_duplicate.cxx  g_leetcode_del_node_in_a_linked_list.cxx  g_leetcode_implement_strstr.cxx  g_leetcode_invert_btree.cxx  g_leetcode_linked_list_cycle.cxx  g_leetcode_max_depth_btree.cxx  g_leetcode_min_stack.cxx  g_leetcode_mv_zeroes.cxx  g_leetcode_queue_using_stacks.cxx  g_leetcode_rm_dup_from_sorted_list.cxx  g_leetcode_same_tree.cxx  g_leetcode_single_number.cxx  g_leetcode_sort_list.cxx  g_misc.cxx  g_misc.hxx  g_sorting_qsort.cxx  main.cxx
hunrizi/: .gitignore  build.gradle  settings.gradle
jblank/: build.gradle
jinstrument/: build.gradle  settings.gradle
jmeter-example-sampler/: README.md  build.gradle
js-promise-tests/: .jshintrc  README.md
jsblank/: .eslintrc.json  .jshintrc  package.json
jscratch/: README.md  build.gradle
jwebsocket/: README.md  build.gradle
kharazim/: README.md  build.gradle
leetcode/: 00001-two-sum.py
mess-tin/: .editorconfig  .gitignore  build.sh
midir/: go.mod  go.sum
misc/chen/: CMakeLists.txt
misc/chen/src/: chen.hxx  chen_misc.hxx  chen_prog_options.hxx  chen_serv.cxx  chen_types.hxx
murky/: .gitignore  CMakeLists.txt
murky/murky-cli/: CMakeLists.txt  main.cpp
ninja-build-tests/: .ninja_log  build.ninja  main.c
noodle/: main.go
orthrus/: README.md  build.gradle  settings.gradle
pasta/: .eslintignore  .eslintrc.js  .npmignore  Jenkinsfile  README.md  index.html  package.json
pgext/: Makefile  pg_simple_ext--0.0.1.sql  pg_simple_ext.c
portal/: .gitignore  Jenkinsfile  build.gradle
probius/: .editorconfig  build.gradle
pyb-tests/: build.py
react-act/: .gitignore  index.html  package.json  pnpm-lock.yaml  test.html  webpack.config.js
roach/: CMakeLists.txt  README.md
roach/example/: example.cxx
roach/include/: roach.hxx  roach_context.hxx  roach_log.hxx  roach_serv.hxx  roach_serv_handler.hxx
roach/src/: roach.cxx  roach_context.cxx  roach_http_parser.cxx  roach_http_parser.hxx  roach_log.cxx  roach_misc.cxx  roach_misc.hxx  roach_serv.cxx  roach_serv_handler.cxx  roach_uvbufpool.cxx  roach_uvbufpool.hxx
scala-scratch/: README.md  build.sbt
simple-compiler/: Makefile  sc.l  sc.y
snow/: build.gradle  settings.gradle
ssl-scratch/: CMakeLists.txt
ssl-scratch/src/: main.cxx
stray/: .gitignore  Makefile  README.md  build.go  go.mod  go.sum  main.go
tachi/: CMakeLists.txt  readme.md
tachi/src/: main.c  main.cpp  tachi-config.c  tachi-config.h  tachi-fs.c  tachi-fs.h  tachi-general.h  tachi-log.cpp  tachi-log.h  tachi-log.hxx  tachi-misc.c  tachi-misc.h  tachi-mm.c  tachi-mm.h  tachi-proc.h  tachi-str.c  tachi-str.h  tachi-test-str.c  tachi-test.c
tatooine/: .gitignore  build.gradle  build.gradle.kts  settings.gradle
tautotools/: Makefile.in  configure  configure.ac  configure~
tautotools/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
tautotools/src/: Makefile.am  Makefile.in  main.cpp  tautotools_config.h.in
tracer/: package.json  webpack.config.js
transmuter/: .editorconfig  .gitignore  build.gradle  settings.gradle
tychus/: build.gradle
vim-win-building/: README.md
webscratch/: .eslintrc.json  index.html
yahaha/: build.gradle  settings.gradle
zealot/: .jshintrc  Gruntfile.js  bower.json  package.json
zeratul/: CMakeLists.txt  README.md
zeratul/src/: main.cxx  z_misc.cxx  z_misc.hxx  z_types.hxx  zeratul.cxx  zeratul.hxx
zoo/: build.gradle  settings.gradle
(+1290 files in other folders)
