#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT(ashen, 1.0, lexiongjia@gmail.com)

AC_CONFIG_SRCDIR([src/ash_alloc.c src/ash_main.c])
AC_CONFIG_HEADERS([src/ash_config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT
